fixed alignment of MiLB logo

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,6 @@ a {
   margin-bottom: 30px;
 }
 
-
 .main_container {
   margin: 20px auto;
   max-width: 640px;
@@ -48,12 +47,14 @@ a {
   text-align: center;
   display: flex;
   justify-content: space-around;
-  /* align-content: center; */
+  align-items: center;
   margin-bottom: 30px
 }
 
 .icon_img {
-  width: 60px;
+  width: 50px;
+  display: block;
+  /* margin: auto; */
 }
 
 .avatar-image {
